--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ run
 #Forge
 CREDITS-fml.txt
 License-Forge.txt
+LICENSE-new.txt
 MinecraftForge-Credits.txt
 Paulscode IBXM Library License.txt
 Paulscode SoundSystem CodecIBXM License.txt
